--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "practice-application",
 	"private": true,
 	"version": "0.1.0",
-	"type": "module",
+	"type": "commonjs",
 	"author": "Yagnik Vadi",
 	"description": "Starter kit for creating apps with React and Typescript application",
 	"keywords": [
@@ -31,6 +31,7 @@
 		"react-redux": "^8.1.0",
 		"react-router-dom": "^6.13.0",
 		"redux-logger": "^3.0.6",
+		"redux-saga": "^1.2.3",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
@@ -38,13 +39,15 @@
 		"@types/react-dom": "^18.0.11",
 		"@types/react-redux": "^7.1.25",
 		"@types/react-router-dom": "^5.3.3",
+		"@types/redux-saga": "^0.10.5",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"@vitejs/plugin-react": "^4.0.0",
-		"eslint": "^8.38.0",
+		"eslint": "^8.42.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
 		"prettier": "^2.8.8",
+		"prettier-eslint": "^15.0.1",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.9"
 	}
