--- a/.prettierrc
+++ b/.prettierrc
@@ -6,35 +6,13 @@
   "singleQuote": false,
   "quoteProps": "as-needed",
   "jsxSingleQuote": false,
-  "trailingComma": "es5",
   "bracketSpacing": true,
   "bracketSameLine": false,
-  "arrowParens": "always",
+  "arrowParens": "avoid",
   "insertPragma": false,
   "proseWrap": "always",
   "htmlWhitespaceSensitivity": "css",
   "vueIndentScriptAndStyle": false,
   "endOfLine": "auto",
-  "parser": "typescript",
-  "overrides": [
-    {
-      "files": ["*.ts", "*.tsx"],
-      "options": {
-        "parser": "typescript",
-        "jsxSingleQuote": false
-      }
-    },
-    {
-      "files": ["*.scss"],
-      "options": {
-        "parser": "scss"
-      }
-    },
-    {
-      "files": ["*.json"],
-      "options": {
-          "parser": "json"
-      }
-    }
-]
+  "parser": "typescript"
 }
