--- a/package.json
+++ b/package.json
@@ -10,19 +10,33 @@
 		"React",
 		"Web Development"
 	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/CreativeThinker2023/counter-application",
+		"directory": "src"
+	},
+	"bugs": {
+		"url": "https://github.com/CreativeThinker2023/counter-application/issues"
+	},
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"lint": "eslint \"src/**/*.{js,jsx,ts,tsx, json}\"",
-		"lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx,json}\"",
-		"prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx,md,json}' --config ./.prettierrc",
-		"pre:commit": "yarn prettier && yarn lint:fix",
+		"lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+		"lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
+		"prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+		"pre:commit": "npm run prettier && npm run lint:fix",
 		"preview": "vite preview"
 	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": "yarn run lint:fix",
+		"**/*.{js,jsx,tsx,ts,less,md,json}": [
+		  	"prettier --write"
+		]
+	},
 	"engines": {
-		"node": ">=18",
-		"npm": ">=9",
-		"yarn": ">=1.22"
+		"node": "18.x",
+		"npm": "9.x",
+		"yarn": "1.22.x"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.5",
@@ -44,8 +58,15 @@
 		"@typescript-eslint/parser": "^5.59.0",
 		"@vitejs/plugin-react": "^4.0.0",
 		"eslint": "^8.42.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-config-standard-with-typescript": "^35.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
+		"eslint-plugin-simple-import-sort": "^10.0.0",
 		"prettier": "^2.8.8",
 		"prettier-eslint": "^15.0.1",
 		"typescript": "^5.0.2",
