--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx}": "yarn run lint:fix",
 		"**/*.{js,jsx,tsx,ts,less,md,json}": [
-		  	"prettier --write"
+			"prettier --write"
 		]
 	},
 	"engines": {
@@ -44,6 +44,7 @@
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.1.0",
 		"react-router-dom": "^6.13.0",
+		"react-toastify": "^9.1.3",
 		"redux-logger": "^3.0.6",
 		"redux-saga": "^1.2.3",
 		"uuid": "^9.0.0"
